[tool.poetry]
name = "als"
version = "0.1.0"
description = "A Streamlit app for ALS analysis"
authors = ["DJ <davidejeaniii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.39.0"
pandas = "^1.3.4"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
plotly = "^5.3.1"
numpy = "1.23.0"
altair = "4.2.2"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.12.1"}
flake8 = "6.1.0"
isort = "5.13.2"
jupyter = "*"
notebook = "*"
pytest = "7.4.3"

[build-system]
requires = ["poetry-core", "setuptools>=58.0.0"]
build-backend = "poetry.core.masonry.api"

