[tool.poetry]
name = "als"
version = "0.1.0"
description = ""
authors = ["David Jean <davidejeaniii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
streamlit = "^1.39.0"
numpy = "^2.1.1"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
